# bonemeal-v2

./: LICENSE  README.md
.github/workflows/: main.yml
bonemeal/: package-lock.json  package.json  vite.config.ts
bonemeal/custom/: documentation.html  login.html  profile.html  progress.html  signup.html
bonemeal/custom/old/: backup  convert_ctm.html  ctm-result.html  index.html  internal_error.html  merge_ctm.html  resize-img.html  resize-result.html  tile_textures.html  upload-ctm.html
bonemeal/custom/resize/: resize-img.html
bonemeal/src/: main.ts  styles.css
bonemeal/src-tauri/: Cargo.toml  tauri.conf.json
bonemeal/src-tauri/icons/: favicon.icns
bonemeal/src-tauri/src/: console.rs  main.rs  resize.rs
bonemeal/src/ui/: console.js  docs-style.css  docs.html  index.html  log.html  main-style.css  progress.html  script.js  settings.html  stats.html  tools.html
bonemeal/src/ui/ctm/: ctm-split.html
bonemeal/src/ui/font/: license.txt
bonemeal/src/ui/js/: slideshow.js
bonemeal/src/ui/resize/: resize-img.html  resize-result.html
bonemeal/ui/: index.html  main-style.css
bonemeal/ui/js/: script.js
ui/: index.html  main-style.css  script.js
ui/.vite/deps_temp_f017dc14/: package-lock.json  package.json
ui/js/: particles.js
