[package]
name = "bonemeal"
version = "0.0.1"
description = "Speed Up Your Workflow"
authors = ["StakeTheSteak"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-center", "macos-private-api", "window-unmaximize", "window-minimize", "window-show", "window-hide", "window-close", "window-unminimize", "window-maximize", "window-start-dragging", "notification-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
tera = "1"
lazy_static = { version = "1.4.0", features = [] }
chrono = { version = "0.4.35", features = [] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.21"
console = "0.15.8"
minecraft-data-rs = "0.8.1"


[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
